# trading

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Untitled Diagram.drawio  requirements.txt
algo-trading/: CMakeLists.txt  algo-trading.sln
algo-trading/csv_utilities/: utilities.cpp
algo-trading/csv_utilities_tests/: CMakeLists.txt  csv_utilities_tests.vcxproj  utilities_tests.cpp
algo-trading/include/: common_utilities.hpp  enums.hpp  includes.hpp  stock_data.hpp  structs.hpp  ta_handler.hpp
algo-trading/pattern/: CMakeLists.txt  csv_data.cpp  main.cpp  pattern.vcxproj  pattern.vcxproj.filters  stock_data.cpp  stock_data.hpp  structs.cpp  structs.hpp  ta_utils.cpp  ta_utils.hpp  utilities.cpp  utilities.hpp
algo-trading/src/csv_utilities/: CMakeLists.txt  csv_utilities.vcxitems  utilities.cpp  utilities.hpp
algo-trading/src/include/: common_utilities.hpp  structs.hpp  ta_handler.hpp  timer.hpp
algo-trading/src/pattern/: CMakeLists.txt  main.cpp  pattern.vcxproj  ta_utils.cpp
algo-trading/src/trading/: trading.vcxproj
algo-trading/tests/Results/: 5min_data.csv
algo-trading/tests/csv_utilities_tests/: CMakeLists.txt  csv_utilities_tests.vcxproj  structs_tests.cpp
algo-trading/tests/resolution_tests/: CMakeLists.txt  resolution_tests.vcxproj
algo_trading/: CMakeLists.txt
algo_trading/include/: clock.hpp  json_include.hpp  logger_macros.hpp  string_include.hpp  structs.hpp  type_trait_utils.hpp  wise_enum_include.hpp
algo_trading/libs/core/: CMakeLists.txt  candle.cpp  candle.hpp  channel_type.hpp  node_info.hpp  node_type.hpp  task.cpp  task.hpp  task_type.hpp  ticker_info.cpp  ticker_info.hpp  trade_request.cpp  trade_request.hpp  trade_type.hpp  utils.cpp  utils.hpp
algo_trading/libs/core/test/: CMakeLists.txt  candle-test.cpp  node_info-test.cpp  task-test.cpp  (+1 more)
algo_trading/libs/curl/: CMakeLists.txt  curl_handler.cpp  curl_handler.hpp  curl_helper.cpp  curl_helper.hpp
algo_trading/libs/zmqlib/: CMakeLists.txt  channel_type.hpp  create_socket.hpp  utils.cpp  utils.hpp
algo_trading/modules/messenger/: CMakeLists.txt  messenger.cpp  messenger.hpp
algo_trading/modules/offline_trade_executor/: CMakeLists.txt  trade_executor.hpp
algo_trading/modules/planner/: CMakeLists.txt  planner.cpp  planner.hpp  trade_block.cpp  trade_block.hpp
algo_trading/modules/task_translator/: CMakeLists.txt  task_translator.cpp  task_translator.hpp
algo_trading/modules/telegram_bot/: CMakeLists.txt  telegram_bot.cpp  telegram_bot.hpp
algo_trading/modules/trade_planner/: CMakeLists.txt  trade_planner.cpp  trade_planner.hpp
algo_trading/modules/translator/: CMakeLists.txt  translator.cpp  translator.hpp
algo_trading/nodes/manager/: CMakeLists.txt  args.json  manager.cpp
algo_trading/nodes/messenger/: CMakeLists.txt  messenger.cpp
algo_trading/nodes/planner/: CMakeLists.txt  planner.cpp
algo_trading/nodes/trader/: CMakeLists.txt  trader.cpp
algo_trading/nodes/translator/: CMakeLists.txt  translator.cpp
cpp/: .clang-format  CMakeLists.txt  CMakeSettings.json  algo-trading.sln  post_build.py  transfer_output.py
cpp/include/: ta_handler.hpp
cpp/include/common/: common_utilities.hpp  csv_data.hpp  curl_handler.hpp  enums.hpp  fs_include.hpp  includes.hpp  json_include.hpp  py_include.hpp  stock_data.hpp  structs.hpp  ta_handler.hpp  timer.hpp  type_trait_utils.hpp
cpp/include/core/: candle.hpp  date.hpp  json_helper.hpp  stock_data.hpp  time.hpp  timer.hpp
cpp/include/helper/: curl_helper.hpp  json_helper.hpp  py_object.hpp  python_utils.hpp
cpp/include/internet/: curl_handler.hpp  curl_helper.hpp  messenger.hpp  stock_exchange.hpp
cpp/include/manager/: robinhood_bot.hpp  strategy_manager.hpp  tasks.hpp  trading_manager.hpp
cpp/include/processor/: processor.hpp  resolution.hpp  ta_utils.hpp  utilities.hpp
cpp/include/pylib/: py_object.hpp  python_utils.hpp
cpp/include/tasks/: tasks.hpp
cpp/lib/win32/: libcurl.lib  python38.lib  python38_d.lib
cpp/pattern/: CMakeLists.txt  includes.hpp  main.cpp  stock_data.cpp  structs.cpp  ta_utils.cpp  utilities.cpp  utilities.hpp
cpp/src/core/: CMakeLists.txt  candle.cpp  date.cpp  json_helper.cpp  stock_data.cpp  time.cpp  timer.cpp
cpp/src/helper/: CMakeLists.txt  curl_helper.cpp  json_helper.cpp  py_object.cpp  python_utils.cpp
cpp/src/include/: csv_data.hpp  enums.hpp  includes.hpp  stock_data.hpp  structs.hpp  type_trait_utils.hpp
cpp/src/internet/: CMakeLists.txt  curl_handler.cpp  messenger.cpp  stock_exchange.cpp
cpp/src/manager/: CMakeLists.txt  args_handler.cpp  args_handler.hpp  robinhood_bot.cpp  robinhood_bot.hpp  strategy.cpp  strategy.hpp  strategy_manager.cpp  tasks.cpp  tasks.hpp  telegram_bot.cpp  telegram_bot.hpp  trading_manager.cpp  trading_manager.hpp
cpp/src/processor/: CMakeLists.txt  processor.cpp  processor.hpp  processor.vcxitems  resolution.cpp  resolution.hpp  ta_utils.cpp  ta_utils.hpp  utilities.cpp  utilities.hpp
cpp/src/pylib/: CMakeLists.txt  py_object.cpp
cpp/src/resolution/: CMakeLists.txt  resolution.cpp  resolution.hpp  resolution.vcxitems
cpp/src/trading/: CMakeLists.txt  args_handler.cpp  main.cpp  ta_utils.hpp  trading.vcxproj
cpp/src/trading-app/: CMakeLists.txt  args_handler.hpp
cpp/tests/: test_macros.hpp
cpp/tests/resolution_tests/: main.cpp  resolution_tests.cpp  resolution_tests.vcxproj
cpp/tst/: test_macros.hpp
cpp/tst/data/: raw_values_test_0.csv  raw_values_test_1.csv  raw_values_test_4.csv  raw_values_test_5.csv
cpp/tst/tests/: CMakeLists.txt  args_handler_tests.cpp  general_tests.cpp  main.cpp  processor_tests.vcxproj  py_object_tests.cpp  python_utils_tests.cpp  resolution_tests.cpp  structs_tests.cpp  tests.vcxproj  type_traits_tests.cpp
src/: 3BC.py  BullishEngulfing.py  CMakeLists.txt  DayHighReject.py  DayLowReject.py  StrategyExecutor.py  csv_data.cpp  csv_data.hpp  main.cpp  paishe_utils.py  stock_data.cpp  stock_data.hpp  structs.hpp  ta_utils.cpp  ta_utils.hpp  timer.cpp  timer.hpp  utilities.cpp
src/StrategyExecutor/: CalculatedData.py  Gada.py  StrategyExecutor.py
(+217 files in other folders)
